5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1671_1105.log
== TEST (2019-04-24 14:33:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasão:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryer")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:33:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasão:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryer")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:34:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasao:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryer")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:34:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasao:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryer")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:35:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasao:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:35:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=int(input("descrição do brasao:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descrição do brasao:"))
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 3
    x=input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entradas: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:36:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.195524
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entradas: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entradas: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entradas: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entradas: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:36:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.23008
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entradas: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entradas: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entradas: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:37:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entradas:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entradas: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:38:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:38:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("descricao do brasao:")
print("Entrada:",x)
if(x=="lobo"):
   print("Casa: Stark")
elif(x=="leao"):
	print("Casa: Lannister")
elif(x=="veado"):
	print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martell")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.163234
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
